Simplify javascript code

--- a/web_ui/templates/index.html
+++ b/web_ui/templates/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" type="text/css" href="static/index.css">
 
   <script type="text/javascript" src="static/external/js/jquery-2.1.4.min.js"></script>
-  <script src="static/external/js/bootstrap.min.js"></script>
-  <script src="static/external/js/chart.min.js"></script>
+  <script type="text/javascript" src="static/external/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="static/external/js/chart.min.js"></script>
   <script type="text/javascript" src="static/external/js/socket.io.slim.js"></script>
-  <script src="static/external/js/smoothie.js"></script>
-  <script type="text/javascript" charset="utf-8" src="static/index.js"></script>
+  <script type="text/javascript" src="static/external/js/smoothie.js"></script>
+  <script type="text/javascript" src="static/index.js"></script>
 </head>
 <body>
   <div class="container">
